# AssemblyZero

./: .coverage  .gitattributes  .gitignore  .implement-status-443.json  .implement-status-598.json  .implement-status-600.json  .implement-status-608.json  .unleashed.json  48-review.md  CHATGPT.md  CLAUDE.md  GEMINI.md  GEMINI.md.bak  LICENSE  README.md  SECURITY.md  TELEMETRY.md  WORKFLOW.md  project-registry.json  pyproject.toml  recovery_plan.md  test-governance-test-gov-t01-1775709533.md  test-governance-test-gov-t02-1775709555.md  test-governance-test-gov-t03-1775709571.md  test-governance-test-gov-t04-1775709590.md  test-governance-test-gov-t05-1775709608.md  test-governance-test-gov-t06-1775709550.md  tmp-sentinel-test.md
.agentos/: config.example.json
.assemblyzero/: config.example.json
.claude/: project-registry.json  project.json.example  settings.json
agentos/: __init__.py
assemblyzero/: __init__.py  tracing.py
dashboard/: .dev.vars.example  package-lock.json  package.json  tsconfig.client.json  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
data/: branch-protection-audit.csv  handoff-marker-status.json  pickup-status.json  session-index.jsonl  sextant-build-spec.md
docs/: 0003-file-inventory.md  10000a-IMMEDIATE-PLAN.md  babysit-protocol.md  claude-capacity-optimization.md  claude-code-contribution-handoff.md  claude-code-showcase-inventory.csv  index.md  lessons-learned-verdict-analyzer.md  lessons-learned.md  orchestrator-stage-invocation-analysis.md  test-merge.md  workflow-lessons-learned-1.md
ideas/: README.md
prompt-temp/: claude-usage-scraper-prompt.md
sentinel/: README.md  package-lock.json  package.json  wrangler.toml
tests/: README.md  __init__.py  conftest.py  test_agentos_config.py  test_assemblyzero_config.py  test_audit.py  test_audit_deferred_scope.py  test_audit_fleet_branch_protection.py  test_audit_fleet_rulesets.py  test_audit_sharding.py  test_audit_tracked_log_writers.py  test_backfill_assemblyzero_flag.py  test_backup_universal_claude_md.py  test_batch_workflow.sh  test_claude_usage_compute.py  test_credentials.py  test_dependabot_review.py  test_deploy_auto_reviewer_workflow.py  test_deploy_cerberus_secrets.py  test_designer.py  test_fix_requires_python.py  test_fleet_readiness.py  test_gate.py  test_gemini_client.py  test_gh_retry.py  test_integration_workflow.py  test_issue_104.py  test_issue_106.py  test_issue_141.py  test_issue_161.py  test_issue_162.py  test_issue_248.py  test_issue_78.py  test_issue_workflow.py  test_land_1131_auto_reviewer_skip_dependabot.py  test_lint_per_repo_claude_md.py  test_lld_reviewer.py  test_lld_workflow.py  test_new_repo_setup.py  test_new_repo_setup_pypi.py  (+7 more)
tmp/: cascade-events.jsonl
tools/: _gate.py  _gh_retry.py  _pat_session.py  agentos-generate.py  agentos-harvest.py  agentos-permissions.py  agentos_config.py  agentos_credentials.py  append_session_log.py  archive_worktree_lineage.py  assemblyzero-generate.py  assemblyzero-harvest.py  assemblyzero-permissions.py  assemblyzero_config.py  assemblyzero_credentials.py  audit_cerberus_health.py  audit_deferred_scope.py  audit_fleet_auto_merge_readiness.py  audit_fleet_branch_protection.py  audit_fleet_rulesets.py  audit_schedule_check.py  audit_tracked_log_writers.py  auth-preflight.sh  backfill_assemblyzero_flag.py  backfill_canonical_labels.py  backfill_issue_audit.py  backfill_telemetry.py  backup-universal-claude-md.ps1  backup_universal_claude_md.py  batch-workflow.sh  batch_cleanup_quality_hooks.py  batch_cleanup_security_hooks.py  batch_deploy_hooks.py  claude-usage-scraper.py  claude_usage_compute.py  clean_transcript.py  collect-cross-project-metrics.py  collect_cross_project_metrics.py  consolidate_logs.py  dependabot_morning_status.py  (+77 more)
wiki/: Audits-Catalog.md  Binky.md  Claudes-World.md  Cost-Management.md  DEATH.md  Dramatis-Personae.md  End-to-End-Orchestration.md  Fix-Implementation-Workflow-Should-Archive-LLD-and-Reports-to-done--on-Completion.md  For-Enterprise-Leaders-Why-AssemblyZero.md  Gemini-Verification.md  Governance-Gates.md  Hex-Codebase-Intelligence.md  History-Monks.md  Hogswatch.md  Home.md  How-the-AgentOS-Learns.md  How-the-AssemblyZero-Learns.md  Implementation-Workflow.md  (+26 more)
(+4542 files in other folders)
