[project]
name = "assemblyzero-tools"
version = "0.1.0"
description = "AssemblyZero configuration and tooling"
authors = [{name = "Marty McEnroe"}]
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "keyring (>=25.7.0,<26.0.0)",
    "anthropic (>=0.78.0,<0.79.0)",
    "langgraph (>=1.0.10rc1,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langchain-anthropic (>=1.3.5,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "google-genai (>=1.60.0,<2.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "tiktoken (>=0.9.0,<1.0.0)",
    "langchain-core (>=1.3.3,<2.0.0)",
    "cryptography (>=48.0.1,<49.0.0)",
    "tenacity (>=9.1.3,<10.0.0)",
    "packaging (>=26.0,<27.0)",
    "pathspec (>=1.0.4,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "jiter (>=0.13.0,<0.14.0)",
    "orjson (>=3.11.7,<4.0.0)",
    "langsmith (>=0.8.18,<0.9.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "pycparser (>=3.0,<4.0)",
    "boto3 (>=1.35.0,<2.0.0)",
    "pywinpty (>=3.0.3,<4.0.0) ; sys_platform == \"win32\""
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration and not e2e and not adversarial'"
markers = [
    "integration: tests that call real external services (deselect with '-m \"not integration\"')",
    "e2e: end-to-end workflow tests requiring sandbox repo",
    "expensive: tests that use significant API quota",
    "adversarial: adversarial tests generated by Gemini Pro (deselect with '-m \"not adversarial\"')",
]

[tool.poetry]
packages = [{include = "assemblyzero"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "mypy (>=1.0.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.coverage.run]
source = ["assemblyzero"]

[tool.coverage.report]
show_missing = true